Update contact information in index.html
Initial website upload

--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
   </ul>
 </section><section id="contact">
   <h2>Contact & Booking</h2>
-  <p>Email: your@email.com</p>
-  <p>WhatsApp: +92-XXXXXXXXXX</p>
+  <p>Email: sarwarkaleem890@gmail.com</p>
+  <p>WhatsApp: +92-3343568248</p>
 </section><footer>
   © 2026 Muhammad Kaleem | All Rights Reserved
 </footer></body>
