Add Instagram and YouTube links to index.html
Added Instagram and YouTube links to the social buttons section and updated contact information.

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@ header{
 .facebook{background:#1877f2;}
 .tiktok{background:#000;}
 .whatsapp{background:#25d366;}
-
+.instagram{background:#e1306c;}
+.youtube{background:#ff0000;}
+  
 .section-title{
   text-align:center;
   font-size:24px;
@@ -97,13 +99,15 @@ footer{
     I share posts, images, and short clips with my audience.
   </p>
 
-  <p>📞 Phone: +92 300 1234567</p>
-  <p>📧 Email: kaleemofficial@gmail.com</p>
+  <p>📞 Phone: +92 3343568248</p>
+  <p>📧 Email: sarwarkaleem890@gmail.com</p>
 
   <div class="social-buttons">
     <a class="facebook" href="https://facebook.com/yourpage" target="_blank">Facebook</a>
     <a class="tiktok" href="https://tiktok.com/@yourid" target="_blank">TikTok</a>
-    <a class="whatsapp" href="https://wa.me/923001234567" target="_blank">Advertise With Me</a>
+    <a class="whatsapp" href="https://wa.me/923001234567" target="_blank">Advertise With Me</a
+    <a class="instagram" href="https://instagram.com/yourusername" target="_blank">Instagram</a>
+    <a class="youtube" href="https://youtube.com/@yourchannel" target="_blank">YouTube</a>
   </div>
 </section>
 
