Refactor social button styles in index.html

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@ header{
 }
 .hero p{margin:8px 0;}
 
+.facebook{background:#1877f2 !important;}
+.tiktok{background:#000 !important;}
+.instagram{background:#e1306c !important;}
+.youtube{background:#ff0000 !important;}
+.whatsapp{background:#25d366 !important;}
+
 .social-buttons{
   display:flex;
   justify-content:center;
@@ -32,18 +38,15 @@ header{
   flex-wrap:wrap;
   margin-top:15px;
 }
+
 .social-buttons a{
+  color:#fff !important;
+  display:inline-block;
   padding:12px 22px;
-  color:#fff;
-  text-decoration:none;
   border-radius:6px;
   font-weight:bold;
+  text-decoration:none;
 }
-.facebook{background:#1877f2;}
-.tiktok{background:#000;}
-.whatsapp{background:#25d366;}
-.instagram{background:#e1306c;}
-.youtube{background:#ff0000;}
   
 .section-title{
   text-align:center;
