--- a/index.html
+++ b/index.html
@@ -106,11 +106,32 @@ footer{
   <p>📧 Email: sarwarkaleem890@gmail.com</p>
 
   <div class="social-buttons">
-    <a class="facebook" href="https://facebook.com/yourpage" target="_blank">Facebook</a>
-    <a class="tiktok" href="https://tiktok.com/@yourid" target="_blank">TikTok</a>
-    <a class="whatsapp" href="https://wa.me/923001234567" target="_blank">Advertise With Me</a
-    <a class="instagram" href="https://instagram.com/yourusername" target="_blank">Instagram</a>
-    <a class="youtube" href="https://youtube.com/@yourchannel" target="_blank">YouTube</a>
+
+  <a href="https://facebook.com/yourpage" target="_blank"
+     style="background:#1877f2;color:#fff;padding:12px 22px;border-radius:6px;font-weight:bold;text-decoration:none;display:inline-block;">
+     Facebook
+  </a>
+
+  <a href="https://tiktok.com/@yourid" target="_blank"
+     style="background:#000;color:#fff;padding:12px 22px;border-radius:6px;font-weight:bold;text-decoration:none;display:inline-block;">
+     TikTok
+  </a>
+
+  <a href="https://instagram.com/yourusername" target="_blank"
+     style="background:#e1306c;color:#fff;padding:12px 22px;border-radius:6px;font-weight:bold;text-decoration:none;display:inline-block;">
+     Instagram
+  </a>
+
+  <a href="https://youtube.com/@yourchannel" target="_blank"
+     style="background:#ff0000;color:#fff;padding:12px 22px;border-radius:6px;font-weight:bold;text-decoration:none;display:inline-block;">
+     YouTube
+  </a>
+
+  <a href="https://wa.me/923001234567" target="_blank"
+     style="background:#25d366;color:#fff;padding:12px 22px;border-radius:6px;font-weight:bold;text-decoration:none;display:inline-block;">
+     WhatsApp
+  </a>
+
   </div>
 </section>
 
