Add buttons for new post and advertisement

--- a/index.html
+++ b/index.html
@@ -134,10 +134,23 @@ footer{
 
   </div>
 </section>
-
+  
+<div style="text-align:center;margin-bottom:20px;">
+  <a href="post-admin.html"
+     style="background:#1877f2;color:#fff;padding:12px 25px;
+     border-radius:6px;text-decoration:none;font-weight:bold;">
+     ➕ Add New Post
+  </a>
+</div>
 <h2 class="section-title">My Posts</h2>
 <div id="posts" class="container"></div>
-
+<div style="text-align:center;margin-bottom:20px;">
+  <a href="ads-admin.html"
+     style="background:#25d366;color:#fff;padding:12px 25px;
+     border-radius:6px;text-decoration:none;font-weight:bold;">
+     ➕ Add New Advertisement
+  </a>
+</div>
 <h2 class="section-title">Advertisements</h2>
 <div id="ads" class="container"></div>
 
